--- a/views/html/jueces/derecha.html
+++ b/views/html/jueces/derecha.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Juez 2</title>
+  <title>Juez 1</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../css/styles.css">
   <!-- Agrega la biblioteca Font Awesome -->
@@ -81,9 +81,11 @@
 <div class="button-container">
 
     
-  <button id="iniciar" class="btn btn-primary">Valido</button>
-  <button id="detener" class="btn btn-warning" onclick="showAlert('Nulo amarillo')">Nulo Amarillo</button>
-  <button id="reiniciar" class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
+  <button class="btn btn-light">Valido </button>
+  <button  class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
+
+  <button class="btn btn-warning" onclick="showAlert('Nulo Amarillo')">Nulo Amarillo</button>
+  <button" class="btn btn-primary" onclick="showAlert('Nulo Azul')">Nulo Azul</button>
 </div>
 
 <script>
