--- a/views/html/jueces/temporizador.html
+++ b/views/html/jueces/temporizador.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Temporizador de un minuto</title>
+  <title>Juez 1</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../css/styles.css">
   <!-- Agrega la biblioteca Font Awesome -->
@@ -20,24 +20,26 @@
       color: #fff; /* Texto blanco */
     }
 
-    #temporizador {
-      font-size: 15em;
-      text-align: center;
-      font-family: Arial, Helvetica, sans-serif;
-      margin-bottom: 30px;
-    }
-
-    button {
-      font-size: 1.5em;
-      margin: 5px;
+    h1 {
+      margin-bottom: 20px; /* Espacio entre el título y los botones */
     }
 
     .button-container {
       text-align: center;
+      width: 100%; /* Ancho del contenedor al 100% */
+      max-width: 300px; /* Ancho máximo para que se vea bien en dispositivos móviles */
+      margin: 0 auto; /* Centra el contenedor */
+    }
+
+    button {
+      font-size: 2em; /* Tamaño de fuente más grande */
+      margin: 10px; /* Mayor espacio entre botones */
+      width: 100%; /* Ancho al 100% del contenedor */
+      height: 4rem; /* Altura de los botones */
     }
 
     .judge-icons {
-      font-size: 2em;
+      font-size: 3em; /* Tamaño de fuente más grande para los íconos de los jueces */
       margin-top: 20px; /* Espacio entre el temporizador y los íconos */
       display: flex;
       gap: 20px;
@@ -46,10 +48,10 @@
     }
 
     .circle-icon {
-      font-size: 2em;
+      font-size: 3em; /* Tamaño de fuente más grande para los íconos de los jueces */
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 70px; /* Tamaño más grande para los íconos de los jueces */
+      height: 70px; /* Tamaño más grande para los íconos de los jueces */
       display: flex;
       align-items: center;
       justify-content: center;
@@ -68,32 +70,30 @@
       background-color: #333; /* Color de fondo de los botones oscuro */
       color: #fff; /* Color del texto de los botones blanco */
       border: 1px solid #fff; /* Borde blanco */
+      height: 4rem;
     }
   </style>
 </head>
 <body>
-  <h2>Competidor : Braikan Andres Piña Salcedo.</h2>
-  <h2>Class: Junior - 59 KG.</h3>
-  <h3>Movimiento: Sentadilla</h3>
-  <h3>Peso :  160 KG. </h3>
-  <button id="detener" class="btn btn-primary">Siguiente</button>
-<div id="temporizador">1:00</div>
 
+<h1>Juez : Mauricio Herrera </h1>
+<h3>Competidor : Braikan Piña</h3>
 <div class="button-container">
-  <button id="iniciar" class="btn btn-primary">Iniciar</button>
-  <button id="detener" class="btn btn-secondary">Detener</button>
-  <button id="reiniciar" class="btn btn-danger">Reiniciar</button>
 
+    
+  <button class="btn btn-light">Valido </button>
+  <button  class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
+
+  <button class="btn btn-warning" onclick="showAlert('Nulo Amarillo')">Nulo Amarillo</button>
+  <button" class="btn btn-primary" onclick="showAlert('Nulo Azul')">Nulo Azul</button>
 </div>
 
-<!-- Agrega íconos para representar la validez o nulidad de los movimientos -->
-<div class="judge-icons">
-  <div class="circle-icon valid-icon"><i class="far fa-circle"></i></div>
-  <div class="circle-icon valid-icon"><i class="far fa-circle"></i></div>
-  <div class="circle-icon valid-icon"><i class="far fa-circle"></i></div>
-</div>
-
-<script src="../../js/temporizador.js"></script>
+<script>
+  function showAlert(message) {
+    // Utiliza la función de alerta de Bootstrap para mostrar un mensaje
+    alert(message);
+  }
+</script>
 
 </body>
 </html>
