--- a/views/html/jueces/alfrente.html
+++ b/views/html/jueces/alfrente.html
@@ -81,9 +81,11 @@
 <div class="button-container">
 
     
-  <button id="iniciar" class="btn btn-primary">Valido</button>
-  <button id="detener" class="btn btn-warning" onclick="showAlert('Nulo amarillo')">Nulo Amarillo</button>
-  <button id="reiniciar" class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
+  <button class="btn btn-light">Valido </button>
+  <button  class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
+
+  <button class="btn btn-warning" onclick="showAlert('Nulo Amarillo')">Nulo Amarillo</button>
+  <button" class="btn btn-primary" onclick="showAlert('Nulo Azul')">Nulo Azul</button>
 </div>
 
 <script>
