--- a/views/html/jueces/temporizador.html
+++ b/views/html/jueces/temporizador.html
@@ -82,10 +82,11 @@
 
     
   <button class="btn btn-light">Valido </button>
-  <button  class="btn btn-danger" onclick="showAlert('Nulo Rojo')">Nulo Rojo</button>
-
+  <button  class="btn btn-danger" onclick="showAlert('Nulo danger')">Nulo Rojo</button>
   <button class="btn btn-warning" onclick="showAlert('Nulo Amarillo')">Nulo Amarillo</button>
-  <button" class="btn btn-primary" onclick="showAlert('Nulo Azul')">Nulo Azul</button>
+  <button class="btn btn-primary" onclick="showAlert('Nulo azul')">Nulo azul</button>
+
+
 </div>
 
 <script>
